[gd_scene load_steps=7 format=2]

[ext_resource path="res://resources/materials/destruction/explosion.material" type="Material" id=1]
[ext_resource path="res://resources/meshes/destruction/explosion.tres" type="ArrayMesh" id=2]
[ext_resource path="res://scripts/destruction/explosion.gd" type="Script" id=3]

[sub_resource type="SphereShape" id=1]
radius = 3.0

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("MeshInstance:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MeshInstance2:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "rotation"
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("MeshInstance:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 120, 120 ), Vector3( 0, 240, 240 ), Vector3( 0, 360, 360 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MeshInstance2:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 360, 360, 0 ), Vector3( 240, 240, 0 ), Vector3( 120, 120, 0 ), Vector3( 0, 0, 0 ) ]
}

[node name="Area" type="Area"]
collision_layer = 0
collision_mask = 5
script = ExtResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="."]
portal_mode = 3
cast_shadow = 0
mesh = ExtResource( 2 )
material/0 = ExtResource( 1 )

[node name="MeshInstance2" type="MeshInstance" parent="."]
portal_mode = 3
cast_shadow = 0
mesh = ExtResource( 2 )
material/0 = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="Lifetime" type="Timer" parent="."]
process_mode = 0
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/rotation = SubResource( 3 )

[connection signal="area_entered" from="." to="." method="_on_Area_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Area_body_entered"]
[connection signal="timeout" from="Lifetime" to="." method="_on_Lifetime_timeout"]
